test/tests/stages/18_structures/invalid_types/invalid_member_operators/member_of_non_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: malloc
        List[1]: 
          TIdentifier: size
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            ULong: 
          Pointer: 
            Void: 
        None: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: a
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: ptr
                  CSingleInit: 
                    CFunctionCall: 
                      TIdentifier: malloc
                      List[1]: 
                        CSizeOfT: 
                          Structure: 
                            TIdentifier: a
                            Bool: 0
                          None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: a
                      Bool: 0
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: x
                    CVar: 
                      TIdentifier: ptr
                      None: 
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
